--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -26,6 +26,10 @@
 
 cmake_minimum_required(VERSION 3.18)
 
+# Require C++17 standard
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
 #
 # Unit tests
 #
